cmake_minimum_required(VERSION 3.21)
project(VK_education C)

set(CMAKE_C_STANDARD 99)

add_executable(VK_education C_Cpp_Advanced/HomeWork_1/Sources/main.c C_Cpp_Advanced/HomeWork_1/Headers/BarGraph.h C_Cpp_Advanced/HomeWork_1/Headers/Vector.h C_Cpp_Advanced/HomeWork_1/Sources/BarGraph.c C_Cpp_Advanced/HomeWork_1/Sources/Vector.c)
